# etna-3-portabilite-my-config

./: .gitignore  .gitmodules
client/: .gitignore  Makefile  README.md  about.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  port_client.pro  request.cpp  request.h
client/header/: header.h  socket.h
client/src/: main.cpp  socket.cpp
server/: CMakeLists.txt  Makefile  server
server/header/: client.h  command.h  cpu.h  cpulinux.hpp  cpumac.hpp  cpuwin.hpp  hdd.h  header.h  linuxhdd.hpp  linuxos.hpp  machdd.hpp  macos.hpp  memory.h  memorylinux.hpp  memorymac.hpp  memorywin.hpp  os.h  socket.h  webservice.h  windowsos.hpp  winhdd.hpp
server/lib/simplejson/: CMakeLists.txt
server/src/: client.cpp  command.cpp  cpu.cpp  cpulinux.cpp  cpumac.cpp  cpuwin.cpp  hdd.cpp  linuxhdd.cpp  linuxos.cpp  machdd.cpp  macos.cpp  main.cpp  memory.cpp  memorylinux.cpp  memorymac.cpp  memorywin.cpp  os.cpp  socket.cpp  webservice.cpp  windowsos.cpp  winhdd.cpp
